# Assigment2-Agentic-Workflow-AI-Enabled-Python

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  research_output_fbcd92bf.json
app/: celery_app.py  main.py
app/agents/: workflow.py
app/models/: schemas.py
app/tasks/: tasks.py
app/utils/: openrouter.py
